Fix pathing